# Credit-Card-Fraud-Detection

backend/: pyproject.toml
backend/app/: main.py
backend/app/routes/: upload.py
backend/app/services/: file_service.py  storage_service.py
frontend/: package-lock.json  package.json
